--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,9 @@
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
-    "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
+    "strict": true,
     "esModuleInterop": true
   },
   "include": ["src"],
